--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       </div>
     <div class="container">
       <div class="clock">
-        <span class="Hrs">00</span>
+        <span class="Hrs"> </span>
         <span>:</span>
-        <span class="Min">00</span>
+        <span class="Min"> </span>
         <span>:</span>
-        <span class="Sec">00</span>
+        <span class="Sec"> </span>
       </div>
     </div>
   </div>
